# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: task-manager.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/: __init__.py  forms.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name_alter_status_timestamp.py  0003_alter_status_name.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_labels.py  0002_alter_task_author_remove_task_labels_labelfortask_and_more.py  0002_initial.py
task_manager/templates/: base.html  footer.html  head.html  index.html  login.html  nav.html  nav_user.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  task_show.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+1 more)
(+3 files in other folders)
